sign in button small correction

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,7 +59,7 @@ header{
 
 .navbar button:hover{
   color: #FF8C00;
-  background-color: white;
+  background-color: #202123;
   border:1px solid #FF8C00;
 }
 
